[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/Leto Text Sans Defect.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/StartScene.gd" type="Script" id=2]
[ext_resource path="res://Sprites/icons/wallet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/icons/money-stack.png" type="Texture" id=4]
[ext_resource path="res://Sprites/icons/coins.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.721569, 0.792157, 0.729412, 0.572549 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
shadow_color = Color( 0, 0, 0, 0.054902 )
shadow_offset = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.580392, 0.631373, 0.592157, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.713726, 0.784314, 0.729412, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.772549, 0.843137, 0.788235, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.772549, 0.843137, 0.788235, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.690196, 0.752941, 0.705882, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.580392, 0.631373, 0.592157, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.772549, 0.843137, 0.788235, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/play.png-eaf40cea76991a3452e8bb1355f9078b.stex"

[node name="StartScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.713726, 0.784314, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.2
custom_colors/font_color = Color( 0.176471, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "MONEY PLANER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doxods_rasxods" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 45, 45 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rasxods_rasxods" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 45, 45 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Budjets" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 45, 45 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.46
anchor_top = 0.5
anchor_right = 0.46
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
icon = SubResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
